fixed button spacing

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -18,6 +18,12 @@ h2,
     height: 468px;
 }
 
+.pages-hero{
+    background-size: cover;
+    height: 268px;
+
+}
+
 .first {
     background-image: url(../images/girl-air1.jpg);
     background-size: cover;
