--- a/css/style.scss
+++ b/css/style.scss
@@ -109,7 +109,7 @@ li {
     font-weight: 800;
     font-size: 22px;
     display: block;
-    padding:10px 20px 10px 20px;
+    padding:10px 30px 10px 30px;
     text-align: center;
     // border-radius: 0.3em;
     color: black;
@@ -308,7 +308,7 @@ li {
 
     .btn-container{
         
-        max-width:310px;
+        max-width:345px;
 
         margin:0 auto;
     }
@@ -319,7 +319,7 @@ li {
         margin-bottom: 15px;
     }
     p {
-        font-size:15px;
+        
         text-align: center;
     }
 a{
@@ -327,7 +327,7 @@ a{
 }
     .waiver-btn {
      
-        margin: 0px auto;
+        margin: 20px auto;
 
     background: #96d59e;
     font-weight: 800;
